# dotrix-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux_ci.yml
src/: brush.rs  controls.rs  cursor.rs  editor.rs  main.rs
